@@ -13,7 +13,7 @@ if [ "$1" == "init" ]; then
     )
     mkdir -p /root/.sealos
     cp -a /kube.tgz /root/.sealos/kube.tgz
-    exec sealos init --repo registry.cn-beijing.aliyuncs.com/k7scn --version 1.18.18 --pkg-url /root/.sealos/kube.tgz ${@:2}
+    exec sealos init --repo registry.cn-beijing.aliyuncs.com/k7scn --version 1.18.19 --pkg-url /root/.sealos/kube.tgz ${@:2}
 else
     exec sealos join ${@:2}
 fi
