@@ -1,3 +1,3 @@
 ```bash
-docker run --rm -v /root:/sysdir ysicing/pkg:1.18.18 cp /kube.tgz /sysdir
+docker run --rm -v /root:/sysdir ysicing/pkg:1.18.19 cp /kube.tgz /sysdir
 ```
