@@ -1,3 +1,12 @@
+## 20210513
+- k8s版本升级为1.18.19
+- etcd版本升级为3.4.16
+- docker-compose版本升级为1.29.2
+- istio版本升级到1.9.5
+- linkerd2版本升级到2.10.2
+- k0s版本升级为1.21.0+k0s.0
+- k0sctl版本升级为0.8.4
+
 ## 20210428
 
 - istio版本升级到1.9.4
